src/test/resources/private/typechecking/fail/access/access_fail_member_01.jova

class Evaluation{
  private int x;
}

class Finish {
  public int finishing() {
    Evaluation e;

    return e.x;
  }

}